--- a/src/components/Testing/components/Points/TestPoint/TestPoint.module.scss
+++ b/src/components/Testing/components/Points/TestPoint/TestPoint.module.scss
@@ -1,6 +1,7 @@
 @import '../../points.module';
 
 .testPoint {
+  @extend %fullBox;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
