--- a/src/components/Testing/components/_points.module.scss
+++ b/src/components/Testing/components/_points.module.scss
@@ -1,7 +1,11 @@
+%fullBox {
+  flex: 1 0 100%;
+}
+
 // common properties for Continuation and Welcome Points
 
 %mainWindow {
-  height: 100%;
+  @extend %fullBox;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -64,4 +68,22 @@
     -webkit-box-shadow: 0 0 10px rgba(0, 0, 100, 0.69);
     box-shadow: 0 0 10px rgba(0, 0, 100, 0.69);
   }
+}
+
+// for Endpoint
+
+%flexColumnCenterCenter {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
